; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_group.c_task_leave_session.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_group.c_task_leave_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task = type { %struct.tgroup* }
%struct.tgroup = type { %struct.TYPE_3__*, i32, i32 }
%struct.TYPE_3__ = type { i32, i64 }
%struct.TYPE_4__ = type { i32 }

@ttys_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @task_leave_session(%struct.task* %0) #0 {
  %2 = alloca %struct.task*, align 8
  %3 = alloca %struct.tgroup*, align 8
  store %struct.task* %0, %struct.task** %2, align 8
  %4 = load %struct.task*, %struct.task** %2, align 8
  %5 = getelementptr inbounds %struct.task, %struct.task* %4, i32 0, i32 0
  %6 = load %struct.tgroup*, %struct.tgroup** %5, align 8
  store %struct.tgroup* %6, %struct.tgroup** %3, align 8
  %7 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %8 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %7, i32 0, i32 2
  %9 = call i32 @list_remove_safe(i32* %8)
  %10 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %11 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = icmp ne %struct.TYPE_3__* %12, null
  br i1 %13, label %14, label %46

14:                                               ; preds = %1
  %15 = call i32 @lock(i32* @ttys_lock)
  %16 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %17 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call %struct.TYPE_4__* @pid_get(i32 %18)
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = call i64 @list_empty(i32* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %38

23:                                               ; preds = %14
  %24 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %25 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %24, i32 0, i32 0
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = call i32 @lock(i32* %27)
  %29 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %30 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %29, i32 0, i32 0
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  store i64 0, i64* %32, align 8
  %33 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %34 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %33, i32 0, i32 0
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = call i32 @unlock(i32* %36)
  br label %38

38:                                               ; preds = %23, %14
  %39 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %40 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %39, i32 0, i32 0
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %40, align 8
  %42 = call i32 @tty_release(%struct.TYPE_3__* %41)
  %43 = load %struct.tgroup*, %struct.tgroup** %3, align 8
  %44 = getelementptr inbounds %struct.tgroup, %struct.tgroup* %43, i32 0, i32 0
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %44, align 8
  %45 = call i32 @unlock(i32* @ttys_lock)
  br label %46

46:                                               ; preds = %38, %1
  ret void
}

declare dso_local i32 @list_remove_safe(i32*) #1

declare dso_local i32 @lock(i32*) #1

declare dso_local i64 @list_empty(i32*) #1

declare dso_local %struct.TYPE_4__* @pid_get(i32) #1

declare dso_local i32 @unlock(i32*) #1

declare dso_local i32 @tty_release(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
